--- a/src/rps/gui/view/GameView.fxml
+++ b/src/rps/gui/view/GameView.fxml
@@ -40,7 +40,19 @@
                   <Insets bottom="10.0" left="20.0" right="20.0" top="10.0" />
                </padding>
             </HBox>
-            <HBox prefHeight="100.0" prefWidth="200.0" VBox.vgrow="ALWAYS" />
+            <HBox prefHeight="100.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+               <children>
+                  <VBox prefHeight="200.0" prefWidth="100.0" HBox.hgrow="ALWAYS">
+                     <children>
+                        <ImageView fx:id="humanMove" pickOnBounds="true" preserveRatio="true" />
+                     </children>
+                  </VBox>
+                  <VBox prefHeight="200.0" prefWidth="100.0" HBox.hgrow="ALWAYS">
+                     <children>
+                        <ImageView fx:id="botMove" pickOnBounds="true" preserveRatio="true" />
+                     </children>
+                  </VBox>
+               </children></HBox>
             <HBox alignment="CENTER" spacing="30.0">
                <children>
                   <MFXButton onAction="#clickRock" prefWidth="70.0" text="Rock" />
