--- a/src/rps/gui/view/GameView.fxml
+++ b/src/rps/gui/view/GameView.fxml
@@ -77,6 +77,7 @@
             <VBox alignment="BOTTOM_CENTER" prefHeight="200.0" prefWidth="100.0" spacing="10.0" VBox.vgrow="SOMETIMES">
                <children>
                   <MFXButton onAction="#clickRestart" prefWidth="80.0" text="Restart" />
+                  <MFXButton onAction="#clickStats" prefWidth="80.0" text="Stats" />
                   <MFXButton onAction="#clickMainMenu" prefWidth="80.0" text="Main Menu" />
                </children>
                <padding>
