--- a/src/rps/gui/view/StatsView.fxml
+++ b/src/rps/gui/view/StatsView.fxml
@@ -1,17 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import io.github.palexdev.materialfx.controls.MFXTableView?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import io.github.palexdev.materialfx.controls.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="rps.gui.controller.GameStatsController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="rps.gui.controller.GameStatsController">
     <center>
         <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
@@ -20,7 +15,8 @@
                   <VBox prefHeight="200.0" prefWidth="100.0" HBox.hgrow="ALWAYS">
                      <children>
                         <MFXTableView fx:id="table" footerVisible="false" prefHeight="600.0" prefWidth="400.0" VBox.vgrow="ALWAYS" />
-                     </children></VBox>
+                     </children>
+                  </VBox>
                   <VBox prefHeight="200.0" prefWidth="100.0" HBox.hgrow="ALWAYS">
                      <children>
                         <GridPane fx:id="gridPane" alignment="CENTER" hgap="5.0" vgap="5.0" VBox.vgrow="SOMETIMES">
@@ -84,7 +80,15 @@
                               <Insets />
                            </opaqueInsets>
                         </GridPane>
-                     </children></VBox>
+                        <HBox prefHeight="182.0" prefWidth="400.0" VBox.vgrow="ALWAYS">
+                            <children>
+                                <AnchorPane fx:id="graphHolder">
+
+                                </AnchorPane>
+                            </children>
+                        </HBox>
+                     </children>
+                  </VBox>
                </children>
             </HBox>
          </children></VBox>
