--- a/src/rps/gui/view/MainMenuView.fxml
+++ b/src/rps/gui/view/MainMenuView.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane prefHeight="200.0" prefWidth="200.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="rps.gui.controller.MainMenuController">
+<BorderPane prefHeight="200.0" prefWidth="200.0" styleClass="backgroundPane" stylesheets="@bootificashun.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="rps.gui.controller.MainMenuController">
    <center>
       <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="400.0" minWidth="400.0" spacing="15.0" BorderPane.alignment="CENTER">
          <children>
