--- a/src/rps/gui/view/bootificashun.css
+++ b/src/rps/gui/view/bootificashun.css
@@ -1,5 +1,5 @@
 * {
-
+-fx-font-family: "Courier New";
 }
 
 .backgroundPane {
@@ -20,6 +20,6 @@
     -fx-text-fill: black;
     -fx-background-radius: 5px;
     -fx-border-radius: 5px;
-    -fx-border-color: #cccccc;
+    -fx-border-color: #b8b6b6;
     -mfx-button-type: raised;
 }
