--- a/src/rps/gui/view/GameView.fxml
+++ b/src/rps/gui/view/GameView.fxml
@@ -45,12 +45,12 @@
             </HBox>
             <HBox fx:id="centerGraphicHBox" VBox.vgrow="SOMETIMES">
                <children>
-                  <VBox fx:id="humanMoveVbox" prefHeight="200.0" prefWidth="100.0" HBox.hgrow="ALWAYS">
+                  <VBox fx:id="humanMoveVbox" alignment="BOTTOM_CENTER" prefHeight="200.0" prefWidth="100.0" HBox.hgrow="ALWAYS">
                      <children>
                         <ImageView fx:id="humanMove" pickOnBounds="true" preserveRatio="true" />
                      </children>
                   </VBox>
-                  <VBox fx:id="botMoveVBox" prefHeight="200.0" prefWidth="100.0" HBox.hgrow="ALWAYS">
+                  <VBox fx:id="botMoveVBox" alignment="BOTTOM_CENTER" prefHeight="200.0" prefWidth="100.0" HBox.hgrow="ALWAYS">
                      <children>
                         <ImageView fx:id="botMove" pickOnBounds="true" preserveRatio="true" />
                      </children>
@@ -97,14 +97,6 @@
                               <Label fx:id="labelBotWins" styleClass="labelResult" text="0" />
                            </children>
                         </HBox>
-                     </children>
-                     <padding>
-                        <Insets left="5.0" right="5.0" />
-                     </padding>
-                  </VBox>
-                  <VBox alignment="CENTER" layoutX="15.0" layoutY="88.0" spacing="5.0">
-                     <children>
-                        <Label styleClass="labelTitle" text="Bot wins:" textAlignment="CENTER" wrapText="true" />
                      </children>
                      <padding>
                         <Insets left="5.0" right="5.0" />
